Add nio package to jdk21 encapsulation exceptions