@@ -146,6 +146,7 @@
             --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
             --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
             --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.util=ALL-UNNAMED
